[package]
name = "RustRTMP"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
byteorder = "1.5.0"
hmac = "0.13.0-rc.3"
sha2 = "0.11.0-rc.3"
rand = "0.10.0-rc.1"
log = "0.4.28"
digest = "0.11.0-rc.4"
ipnet = "2.11.0"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
thiserror = "2.0.17"
async-trait = "0.1.89"
url = "2.5.7"
env_logger = "0.11"

[lib]
name = "rtmp"
path = "src/lib.rs"